--- a/explore.html
+++ b/explore.html
@@ -79,7 +79,7 @@ nav ul li a {
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="tour.html">Tours</a></li>
-                    <li><a href="index.html">Explore</a></li>
+                    <li><a href="explore.html">Explore</a></li>
                     <li><a href="tracker.html">Expense tracker</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
